--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storymode Studio</title>
+    <title>Steeply</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://api.fontshare.com/css?f[]=hoover@300,400,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;1,300&display=swap" rel="stylesheet"> 
@@ -15,17 +15,20 @@
 
     <section class="showcase">
         <header>
-          <h2 class="logo">Storymode Studio</h2>
-          <div class="toggle"></div>
+          <img class="logo" src="pictures/steeplylogo.svg" />
+          
+            <ul class="nav">
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Projects</a></li>
+            </ul>
+          
         </header>
         <video src="video/reel.mp4" muted loop autoplay></video>
         <div class="text">
-          <h2>FILM THE SHIT </h2> 
-          <h3>We out here filmin shit</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco.</p>
-          <a href="#">More</a>
+          <h3 class="vidtext" >Videography</h3>
+          <h2>STEEPLY</h2> 
+          <h3 class="phototext">Photography</h3>
+          <!-- <a href="#">More</a> -->
         </div>
         <ul class="social">
           <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
@@ -33,15 +36,6 @@
           <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
         </ul>
       </section>
-      <div class="menu">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">News</a></li>
-          <li><a href="#">Destination</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
 
 </body>
 </html>
